--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,12 @@ a.dropdown-item {
   padding: 5px;
 }
 
+.btn-zoom {
+  margin: 5px 0 5px 5px;
+  display: inline-flex !important;
+  padding: 5px;
+}
+
 .btn-with-icon > svg {
   margin: auto 5px auto 10px;
 }
@@ -112,4 +118,8 @@ table td {
 
 .width-100 {
   width: 100%;
+}
+
+.height-100 {
+  height: 100%;
 }
