--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@ a.dropdown-item {
   right: 0;
 }
 
+#common-endpoints > .dropdown {
+  position: initial;
+}
+
 a.dropdown-item {
   white-space: normal;
 }
