--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,13 @@ table td {
   width: 1px;
   margin: 5px;
 }
+
+.fullscreen {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1100;
+	background-color: white;
+}
