--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ html {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Appdisplay-logo-spin {
   from {
     transform: rotate(0deg);
   }
