--- a/src/index.css
+++ b/src/index.css
@@ -100,33 +100,42 @@ a.dropdown-item {
 .visualization-links {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
   z-index: 10;
+
+  position: absolute;
+  bottom: 0.5em;
+  right: 0em;
 }
 
 .visualization-links > * {
   margin: 5px 0;
 }
 
-#visualization-container {
+.visualization-container[id^="visualization-container"] {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+
+  position: relative;
 }
 
-#visualization-container > *:last-child {
+.visualization-container[id^="visualization-container"] > *:last-child {
   margin-left: 5px;
 }
 
 /* When fullscreen, make the visualization cover the whole screen space and
 change the controls location */
-#visualization-container:fullscreen {
+.visualization-container[id^="visualization-container"]:fullscreen {
   width: 100vw;
   height: 100vh;
   background-color: white;
 }
-#visualization-container:fullscreen .visualization-links {
+.visualization-container[id^="visualization-container"]:fullscreen
+  .visualization-links {
   position: fixed;
-  bottom: 0.5em;
+  bottom: 3em;
   right: 0.5em;
   z-index: 999;
 }
@@ -163,7 +172,7 @@ change the controls location */
   border-radius: 10%;
   border: none;
   padding: 0.6em !important;
-  transition: all 150ms ease 0.15s;
+  transition: all 200ms ease-out 0.2s;
 }
 
 .btn-controls > a {
@@ -199,6 +208,7 @@ change the controls location */
 }
 
 .cyto-container {
+  display: block;
   background-color: rgb(250, 250, 250);
   width: 100%;
   height: 100%;
@@ -414,8 +424,8 @@ table td {
   margin-left: 15px;
 }
 
-.prefixMapTable {
-  padding-top: 12px;
+.marginTop {
+  margin-top: 12px !important;
 }
 
 button.discrete {
