Prepared client UI to input stream data

--- a/src/index.css
+++ b/src/index.css
@@ -257,6 +257,10 @@ table td {
   font-weight: bold;
 }
 
+.underline {
+  text-decoration: underline;
+}
+
 .divider {
   background: black;
   width: 1px;
